Offset points and properties updating
- Points can now be defined with an offset from another point
- Changing an attachment or type of a value now refreshes the view
- Added translations for the dynamic values